test_cases/positive/function.snek
def Double(value) {
    return Add(value, value);
}

ten = 10;
export DEFAULT = !ten Double(ten);
