test_cases/negative/item_wrong_kind.snek
export DEFAULT = Add(Add, 10);
